[gd_scene load_steps=2 format=3 uid="uid://ca2k5fkwnlvdr"]

[ext_resource type="Script" path="res://scripts/menus/on_boarding_menu.gd" id="1_rfc7v"]

[node name="OnBoardingMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rfc7v")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -64.5
offset_right = 76.0
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PlayerNameLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
placeholder_text = "Enter your name"

[node name="QuickPlayButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "QUICK PLAY"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="CreateRoomButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "CREATE
ROOM"

[node name="JoinRoomButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "JOIN
ROOM"

[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/PlayerNameLineEdit" to="." method="_on_player_name_line_edit_text_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/QuickPlayButton" to="." method="_on_quick_play_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CreateRoomButton" to="." method="_on_create_room_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/JoinRoomButton" to="." method="_on_join_room_button_pressed"]
